<resources>
    <string name="app_name">MusicZone</string>
    <string name="action_settings">Settings</string>
    <string name="wyd">What are you doing?</string>
    <string name="million">Millions of people are using MusicZone\nto enjoy music!</string>
    <string name="signup">Sign Up</string>
    <string name="already">ALREADY HAVE AN ACCOUNT?</string>
    <string name="login">LOGIN</string>
    <string name="spotify">Continue With Spotify</string>
    <string name="google">Continue With Google</string>
    <string name="signin">Sign In</string>
    <string name="slide1text">Feel the ease of searching music  concert  based on spotify playlist, genre, and many more!</string>
    <string name="slide2text"> We help people with the same taste of music to meet up</string>
    <string name="slide3text">Let’s get started then!</string>
    <string name="create_acc">Create Account</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="passw">Password</string>
    <string name="next">Next</string>
    <string name="SignIn">Sign In</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_passw">Enter Password</string>
    <string name="forget_passw">Forget Password</string>
    <string name="remember">Remember Me</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_age">Select Age</string>
    <string name="finish">Finish</string>
    <string name="phone_number">Phone Number</string>
    <string name="active_show">Active Show</string>
    <string name="show_history">Show History</string>
    <string name="hello_blank_fragment">Hello Blank F</string>
    <string name="otp_code_text">CO\nDE</string>
    <string name="otp_verification_text">Verification</string>
    <string name="verif_code">Verify Code</string>
    <string name="otp_description_text">Enter one time password sent on +6287880801287</string>
    <string name="provide_detail">Provide your accounts email for which you want to reset your password!</string>
    <string name="enter_email">Enter Email</string>
    <string name="make_selection">Make Selection</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_email">Via Email</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your identity has been verified! Set your new password</string>
    <string name="new_password">New Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="password_updated">Password Updated</string>
    <string name="search">Search</string>
    <string name="genre">Genre</string>
    <string name="city">City</string>
    <string name="artist">Artist</string>
    <string name="live">Live</string>
    <string name="featured_concert">All Featured Concerts</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="trending">Trending Now</string>
    <string name="view_all">View All</string>
    <string name="Ray">Ray Christian</string>
    <string name="Albert">Albert Christopher</string>
    <string name="username_ray">/@rc144</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="description">Description</string>
    <string name="about_me">About Me</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="concert">Concerts</string>
    <string name="setting">Settings</string>
    <string name="saved">Saved Concerts</string>
    <string name="promotor">Become Promotor</string>
    <string name="logout">Logout</string>
    <string name="detail_featured">All the concerts that are featured and have the top demand in town!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="search_chat">search for name</string>
    <string name="direct_message">Direct messages</string>
    <string name="post_concert">Post Concert</string>
    <string name="poster_image">Poster Image</string>
    <string name="Title">Add your concert title</string>
    <string name="Location">Add your concert location</string>
    <string name="concert_name">Concert Name</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="Date">Select Date</string>
    <string name="Time"> Set Time</string>
    <string name="ChosenTime">Chosen Time</string>
    <string name="Duration">Duration (in minute)</string>
    <string name="virtual_acc">ONCE-OFF VIRTUAL ACCOUNT NUMBER:</string>
    <string name="account_numb">8302017407408318</string>
    <string name="make_deposit">Make a deposit</string>
    <string name="amount_bal">IDR 100,000.00</string>
    <string name="fee_bal">IDR 2,000.00</string>
    <string name="bank_name_string">BCA</string>
    <string name="method_name">ATM</string>
    <string name="payment_desc1">Insert your ATM card and enter your PIN</string>
    <string name="payment_desc2">- Select MENU > LAIN > TRANSFER > SUMBER REKENING > KE REKENING BNI</string>
    <string name="payment_desc3">- Choose your account type</string>
    <string name="payment_desc4">- Enter your Virtual Account Number as the destination account number</string>
    <string name="payment_desc5">- Enter your deposit amount and confirm the transaction</string>
    <string name="confirm_payment">I have made the payment</string>
    <string name="amount">Amount</string>
    <string name="fee">Fee</string>
    <string name="total">Total</string>
    <string name="total_bal">IDR 102,000.00</string>
    <string name="bankName">Bank Name</string>
    <string name="method">Method</string>
    <string name="standBy">Stand by</string>
    <string name="desc_standBy1">When we receive your payment</string>
    <string name="desc_standBy2">We will inform you by email</string>
    <string name="todayconcert">Today Concert</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="playlist">Playlist</string>
    <string name="playlistDesc">Playlist berisikan lagu-lagu yang akan ditampilkan dalam konser atau live music</string>
    <string name="todayconcertdetail">All the concert or live music that will be held today</string>
    <string name="mainGenre">Main Genre</string>
    <string name="selectMainGenre">Select Main Genre</string>
    <string name="nofriends">No Friends?</string>
    <string name="clicktofindfriend">Click here to find friends</string>
    <string name="buyticket">Buy ticket!</string>
    <string name="clicktobuyticket">Click here to buy ticket</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_maps">Map</string>


</resources>
