<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".BuyTicket.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="-250dp"
            android:background="@drawable/rounded_blue"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="20dp">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-115dp"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="center_horizontal"
            android:text="@string/virtual_acc"
            android:textColor="@color/White"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/virtual_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="center_horizontal"
            android:text="@string/account_numb"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <LinearLayout
                android:gravity="start"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/make_deposit"
                    android:textColor="@color/Blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/amount"
                    android:textColor="@color/Grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/amount_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/amount_bal"
                    android:textColor="@color/Blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/fee"
                    android:textColor="@color/Grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/fee_bal"
                    android:textColor="@color/Blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/total"
                    android:textColor="@color/Grey"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/total_bal"
                    android:textColor="@color/Blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/bankName"
                    android:textColor="@color/Grey"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/bank_name_string"
                    android:textColor="@color/Blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/method"
                    android:textColor="@color/Grey"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/method_name"
                    android:textColor="@color/Blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/payment_desc1"
                    android:textColor="@color/Grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/payment_desc2"
                    android:textColor="@color/Grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/payment_desc3"
                    android:textColor="@color/Grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/payment_desc4"
                    android:textColor="@color/Grey"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/payment_desc5"
                    android:textColor="@color/Grey"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_blue"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/confirm_payment"
                    android:textColor="@color/White" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>