<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:padding="30dp"
    tools:context=".Entries.SignUp2ndClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signup_back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="5dp"
            android:src="@drawable/back_arrow"
            android:transitionName="transition_back_btn"
            android:onClick="backToBefore"/>

        // Text Create Acc
        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/create_acc"
            android:textAllCaps="true"
            android:textColor="@color/Black"
            android:textSize="40sp"
            android:transitionName="transition_title_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            // Text Choose Gender
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/choose_gender"
                android:textColor="@color/Blue"
                android:textSize="16sp" />

            // Radio Group Choose Gender
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/other" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/Black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            // Text Select Your Age
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/select_age"
                android:textColor="@color/Blue"
                android:textSize="16sp"/>

            // Calendar
            <DatePicker
                android:id="@+id/age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"/>

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_btn"
            android:background="@drawable/rounded_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:onClick="callNextSignUpScreen"
            android:text="@string/next"
            android:textColor="@color/White"
            android:transitionName="transition_next_btn" />

        <Button
            android:id="@+id/signup_signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/SignIn"
            android:onClick="callLoginScreen"/>


    </LinearLayout>


</ScrollView>